--- a/src/components/ClockWebsite.css
+++ b/src/components/ClockWebsite.css
@@ -1,7 +1,46 @@
 .title {
   font-size: 40px;
 }
+.footer-title {
+  display: flex;
+  justify-content: flex-end;
+  width: auto;
+  margin-left: 900px;
+}
 .menu-page {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+.card-ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  list-style-type: none;
+  padding-left: 0px;
+  margin-bottom: 0px;
+}
+.card-li {
+  width: 300px;
+  max-height: 500px;
+}
+.menu-side {
+  width: 600px;
+}
+.checkout-side {
+  margin-right: 50px;
+}
+.card {
+  width: 100%;
+}
+.menu-img {
+  width: 100%;
+  overflow: hidden;
+}
+.card-body {
+  width: 100%;
+}
+
+.footer {
+  bottom: 0;
+  width: 100%;
 }
