--- a/src/components/ClockWebsite.css
+++ b/src/components/ClockWebsite.css
@@ -1,29 +1,81 @@
+:root {
+  --blue: rgb(49, 92, 185);
+}
+
 .title {
   font-size: 40px;
+  color: #fff;
 }
-.footer-title {
+.title:hover {
+  color: #fff;
+}
+.mp1 {
   display: flex;
-  justify-content: flex-end;
-  width: auto;
-  margin-left: 900px;
+  justify-content: center;
+}
+.navbar {
+  background-color: var(--blue);
+  box-shadow: 0px 5px #fff;
+}
+.navBtn {
+  margin: 0px 3px;
+  background-color: var(--blue);
+  border: none;
+}
+.navBtn:hover {
+  background-color: #fff;
+  color: red;
 }
 .menu-page {
   display: flex;
+  justify-content: center;
+  width: 80%;
+}
+.nav-plus-menu {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.sort-nav {
+  margin: 30px 0px;
+  padding: 20px 0px;
+  display: flex;
+  justify-content: center;
+  background-color: var(--blue);
+  width: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 5px #fff;
+}
+.nav-button-all {
+  margin: 0px 3px;
+  width: 90px;
+  height: 40px;
+  font-size: 16px;
+  background-color: #fff;
+  color: var(--blue);
+}
+.nav-button {
+  margin: 0px 3px;
+  width: 90px;
+  height: 40px;
+  font-size: 16px;
+  background-color: #fff;
+  color: var(--blue);
 }
 .card-ul {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   list-style-type: none;
   padding-left: 0px;
   margin-bottom: 0px;
+  width: 100%;
 }
 .card-li {
-  width: 300px;
-  max-height: 500px;
+  width: 100%;
 }
 .menu-side {
-  width: 600px;
+  width: 100%;
 }
 .checkout-side {
   position: fixed;
@@ -43,5 +95,50 @@
 
 .footer {
   bottom: 0;
+  height: 75px;
+  width: 100vw;
+  background-color: rgb(142, 35, 35);
+  display: flex;
+  align-items: center;
+  box-shadow: 0px -5px #fff;
+}
+.footer-container {
   width: 100%;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  margin-top: 20px;
+}
+.bottom-copywrite {
+  color: #fff;
+  font-size: 13px;
+  margin-bottom: 0px;
+  margin-left: 30%;
+}
+.bottom-title {
+  color: #fff;
+  font-size: 30px;
+  margin-bottom: 0px;
+  margin-left: 20px;
+}
+.about-us {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 20%;
+}
+.h2 {
+  font-size: 90px;
+  display: flex;
+  justify-content: center;
+}
+.h3 {
+  font-size: 30px;
+}
+.h4 {
+  font-size: 20px;
+}
+.p {
+  /* font-size: 6px; */
 }
