--- a/src/components/ClockWebsite.css
+++ b/src/components/ClockWebsite.css
@@ -1,26 +1,38 @@
 :root {
-  --blue: rgb(49, 92, 185);
+  --red: rgb(136, 35, 35);
 }
-
+.bttn {
+  background-color: var(--red);
+  border: none;
+}
 .title {
   font-size: 40px;
   color: #fff;
+  text-shadow: 2px 2px #000;
 }
 .title:hover {
   color: #fff;
+}
+.home-container {
+  display: flex;
+  justify-content: center;
+}
+.home-container > img {
+  opacity: 0.1;
 }
 .mp1 {
   display: flex;
   justify-content: center;
 }
 .navbar {
-  background-color: var(--blue);
+  background-color: var(--red);
   box-shadow: 0px 5px #fff;
 }
 .navBtn {
   margin: 0px 3px;
-  background-color: var(--blue);
+  background-color: var(--red);
   border: none;
+  text-shadow: 0px 1px #000;
 }
 .navBtn:hover {
   background-color: #fff;
@@ -28,7 +40,7 @@
 }
 .menu-page {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   width: 80%;
 }
 .nav-plus-menu {
@@ -41,8 +53,8 @@
   padding: 20px 0px;
   display: flex;
   justify-content: center;
-  background-color: var(--blue);
-  width: 400px;
+  background-color: var(--red);
+  width: 500px;
   border-radius: 10px;
   box-shadow: 0px 5px #fff;
 }
@@ -52,7 +64,9 @@
   height: 40px;
   font-size: 16px;
   background-color: #fff;
-  color: var(--blue);
+  color: var(--red);
+  border: none;
+  box-shadow: 0px 5px rgb(229, 229, 229);
 }
 .nav-button {
   margin: 0px 3px;
@@ -60,19 +74,20 @@
   height: 40px;
   font-size: 16px;
   background-color: #fff;
-  color: var(--blue);
+  color: var(--red);
+  box-shadow: 0px 5px rgb(229, 229, 229);
 }
 .card-ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  /* grid-template-rows: 1fr 1fr 1fr 1fr; */
   list-style-type: none;
   padding-left: 0px;
   margin-bottom: 0px;
   width: 100%;
 }
 .card-li {
-  width: 100%;
+  width: 95%;
 }
 .menu-side {
   width: 100%;
@@ -84,6 +99,9 @@
 }
 .card {
   width: 100%;
+  margin: 10px;
+  padding: 10px;
+  height: 500px;
 }
 .menu-img {
   width: 100%;
@@ -97,7 +115,7 @@
   bottom: 0;
   height: 75px;
   width: 100vw;
-  background-color: rgb(142, 35, 35);
+  background-color: var(--red);
   display: flex;
   align-items: center;
   box-shadow: 0px -5px #fff;
@@ -108,7 +126,6 @@
   display: flex;
   justify-content: center;
   align-items: baseline;
-  margin-top: 20px;
 }
 .bottom-copywrite {
   color: #fff;
@@ -121,6 +138,7 @@
   font-size: 30px;
   margin-bottom: 0px;
   margin-left: 20px;
+  text-shadow: 2px 2px #000;
 }
 .about-us {
   width: 60%;
@@ -141,4 +159,51 @@
 }
 .p {
   /* font-size: 6px; */
+}
+.view-cart-button {
+  margin-right: 10px;
+  height: 100px;
+  margin-top: 100%;
+  box-shadow: 0px 5px #fff;
+}
+.add-to-order-button {
+  box-shadow: 0px 5px rgb(229, 229, 229);
+}
+.order-length {
+  background-color: #fff;
+  color: var(--red);
+  padding: 1px 4px;
+  border-radius: 5px;
+}
+.contact-us {
+  display: flex;
+  justify-content: center;
+}
+.contact-us > img {
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.3;
+  position: relative;
+}
+.contact-info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.contact-info > h2 {
+  margin-top: 50%;
+  margin-bottom: 30px;
+}
+.contact-info > p {
+  padding: 20px;
+}
+.order-title {
+  font-size: 40px;
+}
+.order-item {
+  border-bottom: 1px solid #000;
+  padding: 6px 0px 6px 0px;
+}
+.clear-order-button {
+  margin-bottom: 10px;
 }
