--- a/src/components/ClockWebsite.css
+++ b/src/components/ClockWebsite.css
@@ -4,6 +4,7 @@
 .bttn {
   background-color: var(--red);
   border: none;
+  box-shadow: 0px 5px rgb(229, 229, 229);
 }
 .title {
   font-size: 40px;
@@ -67,6 +68,7 @@
   color: var(--red);
   border: none;
   box-shadow: 0px 5px rgb(229, 229, 229);
+  font-weight: 700;
 }
 .nav-button {
   margin: 0px 3px;
@@ -76,6 +78,7 @@
   background-color: #fff;
   color: var(--red);
   box-shadow: 0px 5px rgb(229, 229, 229);
+  font-weight: 700;
 }
 .card-ul {
   display: grid;
@@ -83,7 +86,7 @@
   /* grid-template-rows: 1fr 1fr 1fr 1fr; */
   list-style-type: none;
   padding-left: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 30px;
   width: 100%;
 }
 .card-li {
@@ -146,34 +149,42 @@
   flex-direction: column;
   margin-left: 20%;
 }
+.text-container {
+  background-color: #fff;
+  padding: 10px 10px;
+  border-radius: 10px;
+  margin: 15px 0px;
+}
 .h2 {
-  font-size: 90px;
+  font-size: 80px;
+  margin-top: 30px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   justify-content: center;
 }
 .h3 {
-  font-size: 30px;
-}
-.h4 {
-  font-size: 20px;
-}
-.p {
-  /* font-size: 6px; */
+  font-size: 40px;
+  margin-bottom: 20px;
 }
 .view-cart-button {
   margin-right: 10px;
   height: 100px;
   margin-top: 100%;
   box-shadow: 0px 5px #fff;
-}
-.add-to-order-button {
-  box-shadow: 0px 5px rgb(229, 229, 229);
+  width: 120px;
+  background-color: rgb(15, 53, 190);
+  font-weight: 500;
 }
 .order-length {
   background-color: #fff;
-  color: var(--red);
-  padding: 1px 4px;
-  border-radius: 5px;
+  color: black;
+  border-radius: 10px;
+  font-weight: 800;
+  font-size: 25px;
+  /* padding: 2px 2px; */
+}
+.add-to-order-button {
+  box-shadow: 0px 5px rgb(229, 229, 229);
 }
 .contact-us {
   display: flex;
@@ -189,6 +200,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: #fff;
 }
 .contact-info > h2 {
   margin-top: 50%;
@@ -202,8 +214,19 @@
 }
 .order-item {
   border-bottom: 1px solid #000;
-  padding: 6px 0px 6px 0px;
+  padding: 8px 0px 8px 0px;
 }
 .clear-order-button {
   margin-bottom: 10px;
+}
+.cart-item-title {
+  font-weight: 700;
+}
+.totalprice {
+  font-weight: 600;
+}
+.totals-plus-button {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8px;
 }
